--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       window.getAuthToken = async () => "TEST_TOKEN";
       window.__clinicalSummaryUploaderProps = {
         summarizeApiUrl: "/api/summarize",
-        writeProfileApiUrl: "/api/profile/write",
+        writeProfileApiUrl: "/api/profile-write",
         getAuthTokenClientFnName: "getAuthToken",
         authHeaderName: "Authorization"
       };
